2004-11-09  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-stream.c (camel_imap4_stream_line):
	Handle not getting the CRLF pair together. Also don't require that
	we have at least 3 bytes in the read buffer as it is possible we
	don't have that much (see bug #69160).

2004-11-08  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-store.c (imap4_subscribe_folder):
	Note the folder-info just subscribed.
	(imap4_unsubscribe_folder): Unnote the folder-info.

2004-11-04  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-engine.c: Added much in-line
	documentation.
	(engine_parse_capability): Use g_ascii_str[n]casecmp().
	(camel_imap4_engine_nstring): New convenience function.

2004-11-02  Not Zed  <NotZed@Ximian.com>

	* camel-object.c (camel_object_hook_event): check interfaces for
	events too.
	(camel_object_trigger_event): check interfaces for events too.
	(camel_object_class_add_event): more checks for interfaces vs
	normal object classes.
	(camel_object_class_add_interface): add an interface to a class.
	(camel_object_get_interface): query for interfaces on an object.
	(camel_object_get_type): register the interface type.

2004-11-02  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-store.c (imap4_folder_utf7_name):
	Don't bother getting the folder delim if the name is "" since we
	don't need it in that case.

	* providers/imap4/camel-imap4-utils.c
	(camel_imap4_get_path_delim): add an assert that s->namespaces is
	non-NULL.

	* providers/imap4/camel-imap4-stream.c
	(camel_imap4_stream_literal): Update stream->inptr after fetching
	the literal chunk.

	* providers/imap4/camel-imap4-summary.c (envelope_decode_address):
	Do proper cleanup in case of error and also handle literals.

	* providers/imap4/camel-imap4-store.c (imap4_get_folder_info):
	Removed camel_service_connect() call which is no longer needed.
	(imap4_connect): If engine is already connected, shortcut to